--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 <body>
     <h1>PERIMETROS, AREAS Y VOLUMENES</h1>
 </div>
+<h3>Luis Fernando Muñoz Campos</h3>
 <h2>Figuras Planas</h2>
 <h3>Perimetro y Área del Triángulo</h3>
 <div class="triangulo" id="triangulo">
-    <div class="input-tria">
-        <input type="number" name="baset" id="baset" placeholder="Base del triangulo"><br>
-        <input type="number" name="alturat" id="alturat" placeholder="Altura del triángulo"><br><br>
-        <input type="number" name="lado1t" id="lado1t" placeholder="Lado 1"><br>
-        <input type="number" name="lado2t" id="lado2t" placeholder="Lado 2"><br>
-        <input type="number" name="lado3t" id="lado3t" placeholder="Lado 3"><br><br>
+    <div class="input-triangulo">
+        <input type="number" name="bt" id="bt" placeholder="Base del triangulo"><br>
+        <input type="number" name="at" id="at" placeholder="Altura del triángulo"><br><br>
+        <input type="number" name="l1t" id="l1t" placeholder="Lado 1"><br>
+        <input type="number" name="l2t" id="l2t" placeholder="Lado 2"><br>
+        <input type="number" name="l3t" id="l3t" placeholder="Lado 3"><br><br>
         <button onclick="enviart()">Enviar</button><br>
         <p id="res1"></p><br>
     </div>
@@ -27,15 +28,15 @@
 </div>
 <h3>Perimetro y Área del Cuadrado</h3>
 <div class="cuadrado" id="cuadrado">
-    <div class="input-cua">
-        <input type="number" name="ladoc" id="ladoc" placeholder="Lado del caudrado"><br>
+    <div class="input-cuadrado">
+        <input type="number" name="ladocua" id="ladocua" placeholder="Lado del caudrado"><br>
         <button onclick="enviarc()">Enviar</button><br>
         <p id="res2"></p><br>
     </div>
 </div>
-<h3>Perimetro y Área del rectangulo o del Romboide</h3>
+<h3>Perimetro y Área del rectangulo</h3>
 <div class="rectangulo" id="rectangulo">
-    <div class="input-rec">
+    <div class="input-rectangulo">
         <input type="number" name="baser" id="baser" placeholder="Base del rectangulo"><br>
         <input type="numbre" name="alturar" id="alturar" placeholder="Altura del rectangulo"><br>
         <button onclick="enviarr()">Enviar</button><br>
@@ -44,7 +45,7 @@
 </div>
 <h3>Perimetro y Área del Rombo</h3>
 <div class="rombo" id="rombo">
-    <div class="input-rom">
+    <div class="input-rombo">
         <input type="number" name="diagonal-menor" id="diagonal-menor" placeholder="Diagonal menor del Rombo"><br>
         <input type="number" name="diagonal-mayor" id="diagonal-mayor" placeholder="Diagonal Mayor del Rombo"><br><br>
         <input type="number" name="lado-rom" id="lado-rom" placeholder="Lado del rombo"><br>
@@ -54,7 +55,7 @@
 </div>    
 <h3>Perimetro y Área del Trapecio</h3>
 <div class="trapec" id="trapecio">
-    <div class="input-tra">
+    <div class="input-trapecio">
         <input type="number" name="base-menor" id="base-menor" placeholder="Base menor del Trapecio"><br>
         <input type="number" name="base-mayor" id="base-mayor" placeholder="Base Mayor del Trapecio"><br>
         <input type="number" name="alturatra" id="alturatra" placeholder="Altura del Trapecio"><br><br>
@@ -66,7 +67,7 @@
 </div>
 <h3>Perimetro y Área del Círculo</h3>
 <div class="circulo" id="circulo">
-    <div class="input-circ">
+    <div class="input-circulo">
         <input type="number" name="radio" id="radio" placeholder="Radio del Circulo"><br>
         <button onclick="enviarcirc()">Enviar</button>
         <p id="res6"></p>
@@ -91,7 +92,7 @@
 </div>
 <h3>Perimetro, Area y Volumen del Paralelepipedo</h3>
 <div class="paralelepipedo" id="paralelepipedo">
-    <div class="input-paralele">
+    <div class="input-paralelepipedo">
         <input type="number" name="alturap" id="alturap" placeholder="Altura"><br>
         <input type="number" name="anchop" id="anchop" placeholder="Ancho"><br>
         <input type="number" name="largop" id="largop" placeholder="Largo"><br><br>
